Press Resources updates
- Add fifth spokesperson and adjust responsive behavior accordingly.
- Increase margin under section headings.

--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -74,6 +74,21 @@
                         </section>
 
                         <section class="contact-person content-l_col-1-2">
+                            <h1 class="contact-person_name">Walter Suskind</h1>
+                            <div class="contact-person_title">Press Assistant</div>
+                            <ul class="contact-person_methods list list__unstyled">
+                                <li class="list_item">
+                                    <a href="mailto:walter.suskind@cfpb.gov">
+                                        walter.suskind@cfpb.gov
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="tel:2024359469">(202) 435-9469</a>
+                                </li>
+                            </ul>
+                        </section>
+
+                        <section class="contact-person content-l_col-1-2">
                             <h1 class="contact-person_name">Mallory McLean</h1>
                             <div class="contact-person_title">Regional Spokesperson</div>
                             <ul class="contact-person_methods list list__unstyled">
@@ -84,21 +99,6 @@
                                 </li>
                                 <li class="list_item">
                                     <a href="tel:2024357955">(202) 435-7955</a>
-                                </li>
-                            </ul>
-                        </section>
-
-                        <section class="contact-person content-l_col-1-2">
-                            <h1 class="contact-person_name">Michelle Person</h1>
-                            <div class="contact-person_title">Spokesperson</div>
-                            <ul class="contact-person_methods list list__unstyled">
-                                <li class="list_item">
-                                    <a href="mailto:michelle.person@cfpb.gov">
-                                        michelle.person@cfpb.gov
-                                    </a>
-                                </li>
-                                <li class="list_item">
-                                    <a href="tel:2024357857">(202) 435-7857</a>
                                 </li>
                             </ul>
                         </section>
@@ -118,7 +118,22 @@
                             </ul>
                         </section>
 
-                    </div> <!-- END .press-contacts_people.content-l_col-2-3 -->
+                        <section class="contact-person content-l_col-1-2">
+                            <h1 class="contact-person_name">Sam Gilford</h1>
+                            <div class="contact-person_title">Spokesperson</div>
+                            <ul class="contact-person_methods list list__unstyled">
+                                <li class="list_item">
+                                    <a href="mailto:samuel.gilford@cfpb.gov">
+                                        samuel.gilford@cfpb.gov
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="tel:2024357673">(202) 435-7673</a>
+                                </li>
+                            </ul>
+                        </section>
+
+                    </div> <!-- END .press-contacts_people.content-l -->
 
                 </section> <!-- END .press-section.press-contacts -->
 
