--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -40,13 +40,13 @@
                             Content materials are produced by our Office of Communications.</p>
 
                         <ul class="list list__links list__icons">
-                            <li class="list_item list__links_item">
+                            <li class="list_item">
                                 <a class="list_link" href="mailto:inquiries@cfpb.gov">
                                     <span class="cf-icon cf-icon-email list_icon"></span>
                                     press@consumerfinance.gov
                                 </a>
                             </li>
-                            <li class="list_item list__links_item">
+                            <li class="list_item">
                                 <a class="list_link" href="tel:8888888888">
                                     <span class="cf-icon cf-icon-phone list_icon"></span>
                                     (202) 435-7000
@@ -156,18 +156,18 @@
                             <div class="contact-person_title">Director</div>
                             <h1 class="contact-person_name">Richard Cordray</h1>
                             <ul class="list list__links">
-                                <li class="list_item list__links_item">
+                                <li class="list_item">
                                     <a class="list_link" href="#">
                                         Biography <span class="cf-icon cf-icon-right"></span>
                                     </a>
                                 </li>
-                                <li class="list_item list__links_item">
+                                <li class="list_item">
                                     <a class="list_link"
                                        href="201402_cfpb_photo_richard-cordray_high-res.jpg">
                                         High-res portrait <span class="cf-icon cf-icon-download"></span>
                                     </a>
                                 </li>
-                                <li class="list_item list__links_item">
+                                <li class="list_item">
                                     <a class="list_link"
                                        href="201402_cfpb_photo_richard-cordray_low-res.jpg">
                                         Low-res portrait <span class="cf-icon cf-icon-download"></span>
@@ -184,18 +184,18 @@
                             <div class="contact-person_title">Deputy Director</div>
                             <h1 class="contact-person_name">Steve Antonakes</h1>
                             <ul class="list list__links">
-                                <li class="list_item list__links_item">
+                                <li class="list_item">
                                     <a class="list_link" href="#">
                                         Biography <span class="cf-icon cf-icon-right"></span>
                                     </a>
                                 </li>
-                                <li class="list_item list__links_item">
+                                <li class="list_item">
                                     <a class="list_link"
                                        href="201405_cfpb_photo_steve-antonakes_high-res.jpg">
                                         High-res portrait <span class="cf-icon cf-icon-download"></span>
                                     </a>
                                 </li>
-                                <li class="list_item list__links_item">
+                                <li class="list_item">
                                     <a class="list_link"
                                        href="201405_cfpb_photo_steve-antonakes_low-res.jpg">
                                         Low-res portrait <span class="cf-icon cf-icon-download"></span>
