--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -37,7 +37,7 @@
 
                         <p>We are committed to engaging with the public and members of the media
                             regularly with accurate and up-to-date information on our work.
-                            Content materials are produced by our Office of Communications.</p>
+                            Materials in this section are produced by our Office of Communications.</p>
 
                         <ul class="list list__links list__icons">
                             <li class="list_item">
@@ -47,7 +47,7 @@
                                 </a>
                             </li>
                             <li class="list_item">
-                                <a class="list_link" href="tel:8888888888">
+                                <a class="list_link" href="tel:2024357000">
                                     <span class="cf-icon cf-icon-phone list_icon"></span>
                                     (202) 435-7000
                                 </a>
