More BEMprovements, list styling

--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -39,22 +39,22 @@
                             regularly with accurate and up-to-date information on our work.
                             Materials in this section are produced by our Office of Communications.</p>
 
-                        <ul class="list list__links list__icons">
-                            <li class="list_item">
-                                <a class="list_link" href="mailto:inquiries@cfpb.gov">
-                                    <span class="cf-icon cf-icon-email list_icon"></span>
-                                    press@consumerfinance.gov
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link" href="tel:2024357000">
-                                    <span class="cf-icon cf-icon-phone list_icon"></span>
-                                    (202) 435-7000
-                                </a>
-                            </li>
-                        </ul>
-
                     </div>
+
+                    <ul class="press-contacts_main-contact-list list list__links list__icons">
+                        <li class="list_item">
+                            <a class="list_link" href="mailto:inquiries@cfpb.gov">
+                                <span class="cf-icon cf-icon-email list_icon"></span>
+                                press@consumerfinance.gov
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link" href="tel:2024357000">
+                                <span class="cf-icon cf-icon-phone list_icon"></span>
+                                (202) 435-7000
+                            </a>
+                        </li>
+                    </ul>
 
                     <div class="press-contacts_people content-l">
 
@@ -157,20 +157,20 @@
                             <h1 class="contact-person_name">Richard Cordray</h1>
                             <ul class="list list__links">
                                 <li class="list_item">
-                                    <a class="list_link" href="#">
-                                        Biography <span class="cf-icon cf-icon-right"></span>
+                                    <a class="list_link jump-link" href="#">
+                                        Biography
                                     </a>
                                 </li>
                                 <li class="list_item">
-                                    <a class="list_link"
+                                    <a class="list_link jump-link jump-link__download"
                                        href="201402_cfpb_photo_richard-cordray_high-res.jpg">
-                                        High-res portrait <span class="cf-icon cf-icon-download"></span>
+                                        High-res portrait
                                     </a>
                                 </li>
                                 <li class="list_item">
-                                    <a class="list_link"
+                                    <a class="list_link jump-link jump-link__download"
                                        href="201402_cfpb_photo_richard-cordray_low-res.jpg">
-                                        Low-res portrait <span class="cf-icon cf-icon-download"></span>
+                                        Low-res portrait
                                     </a>
                                 </li>
                             </ul>
@@ -185,20 +185,20 @@
                             <h1 class="contact-person_name">Steve Antonakes</h1>
                             <ul class="list list__links">
                                 <li class="list_item">
-                                    <a class="list_link" href="#">
-                                        Biography <span class="cf-icon cf-icon-right"></span>
+                                    <a class="list_link jump-link" href="#">
+                                        Biography
                                     </a>
                                 </li>
                                 <li class="list_item">
-                                    <a class="list_link"
+                                    <a class="list_link jump-link jump-link__download"
                                        href="201405_cfpb_photo_steve-antonakes_high-res.jpg">
-                                        High-res portrait <span class="cf-icon cf-icon-download"></span>
+                                        High-res portrait
                                     </a>
                                 </li>
                                 <li class="list_item">
-                                    <a class="list_link"
+                                    <a class="list_link jump-link jump-link__download"
                                        href="201405_cfpb_photo_steve-antonakes_low-res.jpg">
-                                        Low-res portrait <span class="cf-icon cf-icon-download"></span>
+                                        Low-res portrait
                                     </a>
                                 </li>
                             </ul>
@@ -206,9 +206,8 @@
 
                     </div> <!-- END .content-l -->
 
-                    <a class="jump-link" href="#">
+                    <a class="jump-link" href="#" data-icon="right">
                         Find out more about our leadership
-                        <span class="cf-icon cf-icon-right"></span>
                     </a>
 
                 </section> <!-- END .press-section.press-photos-bios -->
@@ -234,7 +233,6 @@
 
                     <a class="jump-link" href="https://cfpb.github.io/design-manual/identity/logo/">
                         Logo files and more in the CFPB Design Manual
-                        <span class="cf-icon cf-icon-right"></span>
                     </a>
 
                 </section> <!-- END .press-section.press-logo -->
