--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -55,11 +55,11 @@
 
         <div class="wrapper content_wrapper">
 
-            <aside class="content_sidebar">
+            <aside class="content_sidebar content__flush-all-on-small">
                 {% include "nav.html" %}
             </aside>
 
-            <section class="content_main content__flush-bottom">
+            <section class="content_main content__flush-bottom content__flush-top-on-small">
                 {% include "post-filters.html" %}
                 {% include "watchroom.html" %}
                 {% include "posts-paginated.html" %}
