Adds query var to press reesources which is needed for the email signup.

--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -12,6 +12,11 @@
 {%- endblock %}
 
 {% block content %}
+
+    {# Set a common 'query' variable to enable sharing of filtering functions
+       between blog and newsroom. #}
+    {% set query = queries.newsroom %}
+
     {% set active_page = 'press-resources' %}
 
     <main class="content content__1-3" id="main" role="main">
