Fixes subnav on press resources page.

--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -26,11 +26,11 @@
 
         <div class="wrapper content_wrapper">
 
-            <aside class="content_sidebar">
+            <aside class="content_sidebar content__flush-all-on-small">
                 {% include "nav.html" %}
             </aside>
             
-            <section class="content_main content__flush-bottom">
+            <section class="content_main content__flush-bottom content__flush-top-on-small">
         
                 <h1 class="u-visually-hidden">Press Resources</h1>
 
