Update templates to show blog posts in newsroom as desired

--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -26,6 +26,7 @@
     {# Create 'post' variable to enable sharing of
        included partials with blog #}
     {% set post = newsroom %}
+    {% set path = '/newsroom' %}
 
     {% import "post-macros.html" as post_macros with context %}
 
