--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -23,8 +23,7 @@
 
 {% block content %}
 
-    {# Create 'post' variable to enable sharing of
-       included partials with blog #}
+    {# Set variables needed to enable sharing of included partials with blog. #}
     {% set post = newsroom %}
     {% set path = '/newsroom' %}
 
