--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -12,6 +12,7 @@
 {%- endblock %}
 
 {% block content %}
+    {% set path = '/newsroom/' %}
     {% set active_page = 'press-resources' %}
 
     <main class="content content__1-3" id="main" role="main">
