--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -25,7 +25,7 @@
 
     {# Set variables needed to enable sharing of included partials with blog. #}
     {% set post = newsroom %}
-    {% set path = '/newsroom' %}
+    {% set path = '/newsroom/' %}
 
     {% import "post-macros.html" as post_macros with context %}
 
