--- a/newsroom/press-information.html
+++ b/newsroom/press-information.html
@@ -1,5 +1,5 @@
 
-<div class="press-information">
+<aside class="press-information">
     <h1 class="header-slug">
         <span class="header-slug_inner">
             Press information
@@ -13,4 +13,4 @@
         <a class="link__block-on-small"
            href="/newsroom/press-resources/">Go to press resources page</a>
     </p>
-</div>
+</aside>
