--- a/newsroom/watchroom.html
+++ b/newsroom/watchroom.html
@@ -1,13 +1,13 @@
 {% for post in watchroom %}
 
     <article class="watchroom summary">
-        <h2 class="fancy-slug">
+        <div class="fancy-slug">
             <span class="fancy-slug_text">
                 <span class="fancy-slug_ribbon-left"></span>
                 Watchroom
                 <span class="fancy-slug_ribbon-right"></span>
             </span>
-        </h2>
+        </div>
         <h1 class="summary_header summary_header__large">
             {{ post.title }}
         </h1>
