--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -23,8 +23,7 @@
 
 {% block content %}
 
-    {# Set a common 'query' variable to enable sharing of filtering functions
-       between blog and newsroom. #}
+    {# Set a few variables needed for sharing of includes between Blog and Newsroom #}
     {% set query = queries.newsroom %}
 
     {# Set variables needed to enable sharing of included partials with blog. #}
