--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -29,8 +29,7 @@
 
     {% set active_filters_total = active_filters|length + active_date_filters|length %}
 
-    {# Set a common 'query' variable to enable sharing of filtering functions
-       between blog and newsroom. #}
+    {# Set a few variables needed for sharing of includes between Blog and Newsroom #}
     {% set query = queries.newsroom %}
 
     {% set newsroom = query.search_with_url_arguments(size=10) %}
