Adds placer copy and structure for the expanded contacts.

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -88,9 +88,78 @@
 
             <div class="content_main">
                 <section>
-                    <div class="demo-placeholder">
-                        List of contacts
-                    </div>
+                    <article class="content_block content_block__flush-top">
+                        <h1 class="h4">
+                            Office of Financial Institutions and Business Liaison
+                        </h1>
+                        <div class="content-l">
+                            <div class="content-l_col-5-8">
+                                <p>
+                                    Share the concerns that you have as a financial institution staffer or member of the business community, whether about requirements, communication, timing, or opportunities to interact with the CFPB.
+                                </p>
+                                <a class="jump-link" href="#">
+                                    Jump link
+                                </a>
+                            </div>
+                            <div class="content-l_col-3-8">
+                                <ul class="list list__icons">
+                                    <li class="list_item">
+                                        <span class="cf-icon cf-icon-email list_icon"></span>
+                                        <a class="list_link" href="mailto:something@cfpb.gov">
+                                            something@consumerfinance.gov
+                                        </a>
+                                    </li>
+                                    <li class="list_item">
+                                        <span class="cf-icon cf-icon-phone list_icon"></span>
+                                        <span class="short-desc">(888) 888-8888</span>
+                                    </li>
+                                    <li class="list_item">
+                                        <span class="cf-icon cf-icon-fax list_icon"></span>
+                                        <span class="short-desc">(888) 888-8888</span>
+                                    </li>
+                                </ul>
+                                <p class="short-desc">
+                                    275 First St. NE Washington, DC 20010
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="content_block">
+                        <h1 class="h4">
+                            Office of Financial Institutions and Business Liaison
+                        </h1>
+                        <div class="content-l">
+                            <div class="content-l_col-5-8">
+                                <p>
+                                    Share the concerns that you have as a financial institution staffer or member of the business community, whether about requirements, communication, timing, or opportunities to interact with the CFPB.
+                                </p>
+                                <a class="jump-link" href="#">
+                                    Jump link
+                                </a>
+                            </div>
+                            <div class="content-l_col-3-8">
+                                <ul class="list list__icons">
+                                    <li class="list_item">
+                                        <span class="cf-icon cf-icon-email list_icon"></span>
+                                        <a class="list_link" href="mailto:something@cfpb.gov">
+                                            something@consumerfinance.gov
+                                        </a>
+                                    </li>
+                                    <li class="list_item">
+                                        <span class="cf-icon cf-icon-phone list_icon"></span>
+                                        <span class="short-desc">(888) 888-8888</span>
+                                    </li>
+                                    <li class="list_item">
+                                        <span class="cf-icon cf-icon-fax list_icon"></span>
+                                        <span class="short-desc">(888) 888-8888</span>
+                                    </li>
+                                </ul>
+                                <p class="short-desc">
+                                    275 First St. NE Washington, DC 20010
+                                </p>
+                            </div>
+                        </div>
+                    </article>
                 </section>
             </div>
 
