--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -17,14 +17,6 @@
     {% set query = queries.contact %}
     {% set contacts = query.search_with_url_arguments(size=10) %}
 
-    {% macro address(contact) %}
-        {{ contact.street if contact.street is defined }}<br>
-        {{ contact.street_2 if contact.street_2 is defined }}<br>
-        {{ contact.city + ',' if contact.city is defined }}
-        {{ contact.state if contact.state is defined }}
-        {{ contact.zip_code if contact.zip_code is defined }}
-    {% endmacro %}
-
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
         <!-- .content_bar must come after .content_hero but before .content_wrapper -->
@@ -101,124 +93,56 @@
 
             <div class="content_main">
                 <section>
-                    {% for contact in contacts %}
-                    <div class="padded-container">
-                        <div class="padded-container_body">
-                            <h1 class="h4">
-                                {{ contact.title }}
-                            </h1>
-                            <div class="content-l">
-                                <div class="content-l_col-5-8">
-                                    {{ contact.content }}
-                                    <!-- <a class="jump-link" href="#">
-                                        Jump link
-                                    </a> -->
-                                </div>
-                                <div class="content-l_col-3-8">
-                                    <ul class="list list__icons">
-                                    {% if contact.email is defined %}
-                                        <li class="list_item">
-                                            <span class="cf-icon cf-icon-email list_icon"></span>
-                                            <a class="list_link" href="mailto:{{ contact.email }}">
-                                                {{ contact.email }}
-                                            </a>
-                                        </li>
-                                    {% endif %}
-                                    {% if contact.phone is defined %}
-                                        <li class="list_item">
-                                            <span class="cf-icon cf-icon-phone list_icon"></span>
-                                            <span class="short-desc">{{ contact.phone }}</span>
-                                        </li>
-                                    {% endif %}
-                                    {% if contact.fax is defined %}
-                                        <li class="list_item">
-                                            <span class="cf-icon cf-icon-fax list_icon"></span>
-                                            <span class="short-desc">{{ contact.fax }}</span>
-                                        </li>
-                                    {% endif %}
-                                    </ul>
-                                {% if contact.street is defined %}
-                                    <p class="short-desc">
-                                        {{ address(contact) }}
-                                    </p>
-                                {% endif %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                    <article class="content_block content_block__flush-top">
+                {%- for contact in contacts %}
+                    <article class="content_block{{ ' content_block__flush-top' if loop.first }}">
                         <h1 class="h4">
-                            Office of Financial Institutions and Business Liaison
+                            {{ contact.title }}
                         </h1>
                         <div class="content-l">
                             <div class="content-l_col-5-8">
-                                <p>
-                                    Share the concerns that you have as a financial institution staffer or member of the business community, whether about requirements, communication, timing, or opportunities to interact with the CFPB.
-                                </p>
-                                <a class="jump-link" href="#">
-                                    Jump link
+                                {{ contact.content }}
+                                {%- if contact.web != 'None' %}
+                                <a class="jump-link" href="{{ contact.web }}">
+                                    {{ contact.web }}
                                 </a>
+                                {%- endif %}
                             </div>
                             <div class="content-l_col-3-8">
                                 <ul class="list list__icons">
+                                {%- if contact.email != 'None' %}
                                     <li class="list_item">
                                         <span class="cf-icon cf-icon-email list_icon"></span>
-                                        <a class="list_link" href="mailto:something@cfpb.gov">
-                                            something@consumerfinance.gov
+                                        <a class="list_link" href="mailto:{{ contact.email }}">
+                                            {{ contact.email }}
                                         </a>
                                     </li>
+                                {%- endif %}
+                                {%- if contact.phone != 'None' %}
                                     <li class="list_item">
                                         <span class="cf-icon cf-icon-phone list_icon"></span>
-                                        <span class="short-desc">(888) 888-8888</span>
+                                        <span class="short-desc">{{ contact.phone }}</span>
                                     </li>
+                                {%- endif %}
+                                {%- if contact.fax != 'None' %}
                                     <li class="list_item">
                                         <span class="cf-icon cf-icon-fax list_icon"></span>
-                                        <span class="short-desc">(888) 888-8888</span>
+                                        <span class="short-desc">{{ contact.fax }}</span>
                                     </li>
+                                {%- endif %}
                                 </ul>
+                            {%- if contact.street != 'None' %}
                                 <p class="short-desc">
-                                    275 First St. NE Washington, DC 20010
+                                    {{ contact.street if contact.street != 'None' }}<br>
+                                    {{ contact.street_2 if contact.street_2 != 'None' }}<br>
+                                    {{ contact.city + ',' if contact.city != 'None' }}
+                                    {{ contact.state if contact.state != 'None' }}
+                                    {{ contact.zip_code if contact.zip_code != 'None' }}
                                 </p>
+                            {%- endif %}
                             </div>
                         </div>
-                    </article>
-                    <article class="content_block">
-                        <h1 class="h4">
-                            Office of Financial Institutions and Business Liaison
-                        </h1>
-                        <div class="content-l">
-                            <div class="content-l_col-5-8">
-                                <p>
-                                    Share the concerns that you have as a financial institution staffer or member of the business community, whether about requirements, communication, timing, or opportunities to interact with the CFPB.
-                                </p>
-                                <a class="jump-link" href="#">
-                                    Jump link
-                                </a>
-                            </div>
-                            <div class="content-l_col-3-8">
-                                <ul class="list list__icons">
-                                    <li class="list_item">
-                                        <span class="cf-icon cf-icon-email list_icon"></span>
-                                        <a class="list_link" href="mailto:something@cfpb.gov">
-                                            something@consumerfinance.gov
-                                        </a>
-                                    </li>
-                                    <li class="list_item">
-                                        <span class="cf-icon cf-icon-phone list_icon"></span>
-                                        <span class="short-desc">(888) 888-8888</span>
-                                    </li>
-                                    <li class="list_item">
-                                        <span class="cf-icon cf-icon-fax list_icon"></span>
-                                        <span class="short-desc">(888) 888-8888</span>
-                                    </li>
-                                </ul>
-                                <p class="short-desc">
-                                    275 First St. NE Washington, DC 20010
-                                </p>
-                            </div>
-                        </div>
-                    </article>
+                    </artivle>
+                {%- endfor %}
                 </section>
             </div>
 
