--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -16,6 +16,8 @@
     {# Set a few variables needed for sharing of includes between Blog and Newsroom #}
     {% set query = queries.contact %}
     {% set contacts = query.search_with_url_arguments(size=10) %}
+    {% set general_inqueries = get_document('contact', 'general-inqueries') %}
+    {% set submit_a_complaint = get_document('contact', 'submit-a-complaint') %}
 
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
@@ -29,47 +31,68 @@
                 <div class="content-l">
                     <section class="content-l_col content-l_col-1-2">
                         <h1 class="h4">
-                            General inqueries
+                            {{ general_inqueries.title }}
                         </h1>
                         <p class="short-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum quia minima magni quae reprehenderit quas aperiam atque libero officia provident odio quis quasi itaque sint accusantium iure sequi impedit.
+                            {{ general_inqueries.sitewide_desc }}
                         </p>
                         <ul class="list list__icons">
+                        {%- if general_inqueries.email != 'None' %}
                             <li class="list_item">
                                 <span class="cf-icon cf-icon-email list_icon"></span>
-                                <a class="list_link" href="mailto:something@cfpb.gov">
-                                    something@consumerfinance.gov
+                                <a class="list_link" href="mailto:{{ general_inqueries.email }}">
+                                    {{ general_inqueries.email }}
                                 </a>
                             </li>
+                        {%- endif %}
+                        {%- if general_inqueries.phone != 'None' %}
                             <li class="list_item">
                                 <span class="cf-icon cf-icon-phone list_icon"></span>
-                                <span class="short-desc">(888) 888-8888</span>
+                                <span class="short-desc">
+                                    {{ format_phone(general_inqueries.phone) }}
+                                </span>
                             </li>
+                        {%- endif %}
+                        {%- if general_inqueries.fax != 'None' %}
                             <li class="list_item">
                                 <span class="cf-icon cf-icon-fax list_icon"></span>
-                                <span class="short-desc">(888) 888-8888</span>
+                                <span class="short-desc">
+                                    {{ format_phone(general_inqueries.fax) }}
+                                </span>
                             </li>
+                        {%- endif %}                            
                         </ul>
                     </section>
                     <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                         <h1 class="h4">
-                            Submit a complaint
+                            {{ submit_a_complaint.title }}
                         </h1>
                         <p class="short-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum quia minima magni quae reprehenderit quas aperiam atque libero officia provident odio quis quasi itaque sint accusantium iure sequi impedit.
+                            {{ submit_a_complaint.sitewide_desc }}
                         </p>
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <ul class="list list__unstyled">
+                                {%- if submit_a_complaint.phone != 'None' %}
                                     <li class="list_item short-desc">
-                                        (888) 888-8888
-                                    </li>
-                                    <li class="list_item short-desc">
-                                        (888) 888-8888
+                                        {{ format_phone(submit_a_complaint.phone) }}
+                                    {%- if submit_a_complaint.phone_desc != 'None' %}
                                         <span class="micro-copy micro-copy__large">
-                                            TTY/TDD
+                                            {{ submit_a_complaint.phone_desc }}
                                         </span>
+                                    {%- endif %}
                                     </li>
+                                {%- endif %}
+                                {%- if submit_a_complaint.phone_2 != 'None' %}
+                                    <li class="list_item short-desc">
+                                        {{ format_phone(submit_a_complaint.phone_2) }}
+                                    {%- if submit_a_complaint.phone_2_desc != 'None' %}
+                                        <span class="micro-copy micro-copy__large">
+                                            {{ submit_a_complaint.phone_2_desc }}
+                                        </span>
+                                    {%- endif %}
+                                    </li>
+                                {%- endif %}
                                 </ul>
                             </div>
                             <div class="content-l_col content-l_col-1-2">
@@ -120,13 +143,17 @@
                                 {%- if contact.phone != 'None' %}
                                     <li class="list_item">
                                         <span class="cf-icon cf-icon-phone list_icon"></span>
-                                        <span class="short-desc">{{ contact.phone }}</span>
+                                        <span class="short-desc">
+                                            {{ format_phone(contact.phone) }}
+                                        </span>
                                     </li>
                                 {%- endif %}
                                 {%- if contact.fax != 'None' %}
                                     <li class="list_item">
                                         <span class="cf-icon cf-icon-fax list_icon"></span>
-                                        <span class="short-desc">{{ contact.fax }}</span>
+                                        <span class="short-desc">
+                                            {{ format_phone(contact.fax) }}
+                                        </span>
                                     </li>
                                 {%- endif %}
                                 </ul>
