--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -119,7 +119,7 @@
 
             <div class="content_main">
                 <section>
-                {%- for contact in contacts %}
+                {%- for contact in contacts|sort(attribute='title') %}
                     <article class="content_block{{ ' content_block__flush-top' if loop.first }}">
                         <h1 class="h4">
                             {{ contact.title }}
